# de-system-solver

./: .gitignore  Cargo.toml  LICENSE  README.md  build_and_test.sh  py_requirements.txt  run_py_scripts.sh
dess/: Cargo.toml  README.md
dess-core/: Cargo.toml
dess-core/dess-proc-macros/: Cargo.toml
dess-core/dess-proc-macros/src/: pyo3_api.rs
dess-core/proc-macros/: Cargo.toml
dess-core/proc-macros/src/: bare_clone.rs  history_methods.rs  history_vec.rs  imports.rs  lib.rs  pyo3_api.rs  solver_attr.rs  utilities.rs
dess-core/src/: imports.rs  lib.rs  prelude.rs  pyo3_imports.rs  solver.rs  traits_and_macros.rs  utilities.rs
dess-examples/: Cargo.toml  README.md
dess-examples-pyo3/: Cargo.toml  pyproject.toml
dess-examples-pyo3/src/: lib.rs
dess-examples/src/: components.rs  imports.rs  lib.rs  main.rs  tests.rs  three_thermal_mass_sys.rs  three_thremal_mass_sys.rs  three_thrml_mass_w_bc_sys.rs
dess-examples/src/tests/: euler_three_thermal_mass_sys.rs  euler_three_thrml_mass_w_bc_sys.rs  mod.rs  tests_core.rs
dess-examples/src/tests/fixtures/: euler benchmark.yaml  euler_baseline.yaml  euler_benchmark_w_bc.yaml  euler_w_bc_baseline.yaml  heuns benchmark.yaml  heuns_benchmark_w_bc.yaml  midpoint benchmark.yaml  midpoint_benchmark_w_bc.yaml  ralstons benchmark.yaml  rk23 benchmark.yaml  rk4 benchmark.yaml  rk45 benchmark.yaml
dess-examples/tests/: euler_three_thermal_mass_sys.rs  euler_three_thrml_mass_w_bc_sys.rs  tests_core.rs
dess-examples/tests/fixtures/: euler benchmark.yaml  heuns benchmark.yaml  ralstons benchmark.yaml  ralstons_benchmark_w_bc.yaml  rk23 benchmark.yaml  rk4 benchmark.yaml  rk45 benchmark.yaml  rk45_benchmark_w_bc.yaml  rk4_benchmark_w_bc.yaml
dess-pyo3/: Cargo.toml  pyproject.toml
dess-pyo3/src/: lib.rs
dess/dess-proc-macros/: Cargo.toml  README.md
dess/dess-proc-macros/src/: bare_clone.rs  history_methods.rs  solver_attr.rs
dess/src/: imports.rs  lib.rs  prelude.rs  traits_and_macros.rs
dss-core/: Cargo.toml
dss-core/proc-macros/src/: bare_clone.rs  history_methods.rs  history_vec.rs  imports.rs  lib.rs  pyo3_api.rs  solver_attr.rs  solver_derive.rs  walk_derive.rs
dss-core/src/: imports.rs  lib.rs  main.rs  prelude.rs  solver.rs  traits_and_macros.rs
dss-examples/: Cargo.toml
dss-examples/src/: components.rs  imports.rs  main.rs  tests.rs
dss-examples/tests/fixtures/: benchmark.yaml  rk4 benchmark.yaml
dss-pyo3/: Cargo.toml  pyproject.toml
dss-pyo3/src/: lib.rs
proc-macros/src/: bhm_derive.rs  history_methods.rs  history_vec.rs  history_vec_derive.rs  imports.rs  lib.rs  solver_derive.rs
python/: coe_demo.py  dt_sweep.py  dt_sweep_rk4.py  exploration.py  solver_sweep.py
python/System3TM/: coe_demo.py  dt_sweep.py  dt_sweep_rk4.py  solver_sweep.py
python/System3TMWithBC/: solver_sweep.py  solver_sweep_with_bc.py
python/Sytem3TM/: coe_demo.py  dt_sweep.py  dt_sweep_rk4.py  solver_sweep.py
src/: components.rs  imports.rs  main.rs  solver.rs  traits.rs  traits_and_macros.rs
tests/: Cargo.toml
tests/fixtures/: euler_baseline.yaml  euler_w_bc_baseline.yaml
tests/src/: euler_three_thermal_mass_sys.rs  euler_three_thrml_mass_w_bc_sys.rs  lib.rs  main.rs  tests_core.rs
