[workspace]

[workspace.package]
authors = [
    "Chad Baker, Lead Developer",
    "Robin Steuteville, Developer",
    "Nick Reinicke, Developer",
]
license = "BSD-3-Clause"
edition = "2024"
repository = "https://github.com/NREL/de-system-solver"

members = [
    "dess-core", # pure rust core 
    "dess-examples", # examples of how to run the code,
    "dess-examples-pyo3", # pyo3 api for dess-core
]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[workspace.dependencies]
anyhow = "1.0.57"
pyo3 = "0.18.1"
pyo3-log = "*"
serde = { version = "1.0.152", features = ["derive"]}
serde_json = "1.0.93"
serde_yaml = "0.9.17"