[package]
name = "dess-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
bincode = "1.3.3"
proc-macros = { path = "proc-macros" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
derive_builder = { workspace = true }
# optional
pyo3 = { workspace = true, features = ["extension-module", "anyhow"], optional = true }


[features]
pyo3 = ["dep:pyo3"]
