[package]
name = "dess-examples-pyo3"
version = "0.1.0"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "dess_pyo3"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { workspace = true, features = ["extension-module"] }
dess-core = { path = "../dess-core", features = ["pyo3"] }
dess-examples = { path = "../dess-examples", features = ["pyo3"] }
