[package]
name = "dess-examples"
version = "0.1.1"
description = "DESS examples"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
dess = { path = "../dess", version = "0.1.0" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
pyo3 = { workspace = true, features = [
    "extension-module",
    "anyhow",
], optional = true }
eng_fmt = "0.1.0"

[features]
pyo3 = ["dep:pyo3", "dess/pyo3"]
