[package]
name = "dess"
version = "0.1.0"
description = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
bincode = "1.3.3"
dess-proc-macros = { path = "dess-proc-macros", version = "0.1.0" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
# optional
pyo3 = { workspace = true, features = [
    "extension-module",
    "anyhow",
], optional = true }


[features]
pyo3 = ["dep:pyo3"]
