[package]
name = "generic-ode-solver-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
bincode = "1.3.3"
ode_solvers = "0.3.7"
proc-macros = { path = "proc-macros" }
serde = { version = "1.0.152", features = ["derive"]}
serde_json = "1.0.93"
serde_yaml = "0.9.17"