[package]
name = "dss-examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
dss-core = { path = "../dss-core"}
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
pyo3 = { workspace = true, features = ["extension-module", "anyhow"], optional = true }

[features]
pyo3 = ["dep:pyo3", "dss-core/pyo3"]
