[package]
name = "dess-proc-macros"
version = "0.1.1"
description = "DESS procedural macros"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
readme = "README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.37"
quote = "1.0.18"
regex = "1.6.0"
syn = { version = "1.0.92", features = ["full"] }

[lib]
proc-macro = true

